--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,8 @@
             </nav>
         </header>
         <div id=about-me>
-            <h2>About Me</h2>
-            <img src="assets/images/me.jpg" width=120px height=120px>
-            <div>My name is Danny Kimble.</div>
+            <h2>Portfolio</h2>
+            <div>Coming Soon</div>
         </div>
     </body>
     <footer>Copyright ©</footer>
