--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,31 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <header>
-                <h1>Danny Kimble</h1>
-            <nav>
-                <p class="click-here click-border"><a href="contact.html">Contact</a></p>
-                <p class="click-here click-border"><a href="portfolio.html">Portfolio</a></p>
-                <p class="click-here"><a href="index.html">About</a></p>
-                
-            </nav>
-        </header>
-        <div id=about-me>
-            <h2>Contact</h2>
-            <div>email</div>
-        </div>
-    </body>
+            <div class="wrapper">
+                <header>
+                        <h1>Danny Kimble</h1>
+                        <nav>
+                            <ul>
+                                <li class="click-border"><a href="contact.html">Contact</a></li>
+                                <li class="click-border"><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="index.html">About</a></li>
+                            </ul>
+                        </nav>
+                    </header>
+                    <div class="clearfix inside">
+                        <h2>Contact</h2>
+                        <form>
+                            Name
+                            <input type="text" name="name" value="John Smith" size="153">
+                            <div><br>Email</div>
+                            <input type="email" name="email" value="example@gmail.com" size="153">
+                            <div><br>Comment</div>
+                            <textarea type="text" name="comment" rows="15" cols="151">Comments go here.</textarea>
+                            <input type="button" onclick="alert('Sorry something went wrong!')" value="Submit">
+                        </form>
+                    </div>
+                <div class="push"></div>
+            </div>
+        </body>
     <footer>Copyright ©</footer>
 </html>
