--- a/portfolio.html
+++ b/portfolio.html
@@ -6,19 +6,52 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <header>
-                <h1>Danny Kimble</h1>
-            <nav>
-                <p class="click-here click-border"><a href="contact.html">Contact</a></p>
-                <p class="click-here click-border"><a href="portfolio.html">Portfolio</a></p>
-                <p class="click-here"><a href="index.html">About</a></p>
-                
-            </nav>
-        </header>
-        <div id=about-me>
-            <h2>Portfolio</h2>
-            <div>Coming Soon</div>
-        </div>
-    </body>
+            <div class="wrapper">
+                <header>
+                        <h1>Danny Kimble</h1>
+                        <nav>
+                            <ul>
+                                <li class="click-border"><a href="contact.html">Contact</a></li>
+                                <li class="click-border"><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="index.html">About</a></li>
+                            </ul>
+                        </nav>
+                    </header>
+                <div class="clearfix inside">
+                        <h2>Portfolio</h2>
+                        <div class="port-container">
+                            <a href="sorry.html"><img class="port-pic" src="assets/images/image1.jpeg"></a>
+                            <p class="port-desc">
+                                Hangman
+                            </p> 
+                        </div>
+                        <div class="port-container">
+                            <a href="sorry.html"><img class="port-pic" src="assets/images/image2.jpeg"></a>
+                            <p class="port-desc">
+                                RPG Game
+                            </p> 
+                        </div>
+                        <div class="port-container">
+                            <a href="sorry.html"><img class="port-pic" src="assets/images/image3.jpeg"></a>
+                            <p class="port-desc">
+                                Trivia Game
+                            </p> 
+                        </div>
+                        <div class="port-container">
+                            <a href="sorry.html"><img class="port-pic" src="assets/images/image4.jpeg"></a>
+                            <p class="port-desc">
+                                Rutgers Info Widget
+                            </p> 
+                        </div>
+                        <div class="port-container">
+                            <a href="sorry.html"><img class="port-pic" src="assets/images/image5.jpeg"></a>
+                            <p class="port-desc">
+                                Rock Paper Scissors
+                            </p> 
+                        </div>
+                    </div>
+                <div class="push"></div>
+            </div>
+        </body>
     <footer>Copyright ©</footer>
 </html>
