--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="clearfix inside">
                 <h2>About Me</h2>
                 <img class="my-pic" src="assets/images/me.jpg" width=120px height=120px>
-                <p>My name is Danny Kimble. I am married to a wonderful woman, Kimberly, and together we have three kids. Ellery is an 11 year old girl, Linkyn is a 4 year old boy, Maxwell is a 2 year old boy. Ellery is interested in art and animals. Linkyn was named after Link from the Legend of Zelda (we call him Link too) and he loves Super Mario. Maxwell refuses to talk even though he clearly understands us.</p>
+                <p>My name is Danny Kimble. I am married to a wonderful woman, Kimberly - a birth photographer, and together we have three kids. Ellery is an 11 year old girl, Linkyn is a 4 year old boy, Maxwell is a 2 year old boy. Ellery is interested in art and animals. Linkyn was named after Link from the Legend of Zelda (we call him Link too) and he loves Super Mario. Maxwell refuses to talk even though he clearly understands us.</p>
                 <p>I am studying Computer Science at Portland Community College currently while simultaneously going through the Coding Bootcamp through the University of Oregon. I love computers and I love coding. I also love video games and spend much of my free time playing them. I hope to be able to one day make video games with my degree and HTML experience. Thank you for reading!</p>
             </div>
             <div class="push"></div>
