--- a/sorry.html
+++ b/sorry.html
@@ -8,6 +8,7 @@
     <body>
         <div class="wrapper">
             <header>
+                <div class="inside">
                     <h1>Danny Kimble</h1>
                     <nav>
                         <ul>
@@ -16,12 +17,13 @@
                             <li><a href="index.html">About</a></li>
                         </ul>
                     </nav>
-                </header>
-            <div class="clearfix inside">
-                <h2>Sorry</h2>
-                <p>There isn't anything here!</p>
-            </div>
-            <div class="push"></div>
+                </div>
+            </header>
+        <div class="clearfix inside">
+            <h2>Sorry</h2>
+            <p>There isn't anything here!</p>
+        </div>
+        <div class="push"></div>
         </div>
     </body>
     <footer class="footer">Copyright ©</footer>
