--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,16 @@
     </head>
     <div class="wrapper">
         <header>
-            <h1>Danny Kimble</h1>
-            <nav>
-                <ul>
-                    <li class="click-border"><a href="contact.html">Contact</a></li>
-                    <li class="click-border"><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="index.html">About</a></li>
-                </ul>
-            </nav>
+            <div class="inside">
+                <h1>Danny Kimble</h1>
+                <nav>
+                    <ul>
+                        <li class="click-border"><a href="contact.html">Contact</a></li>
+                        <li class="click-border"><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="index.html">About</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <body>
             <div class="clearfix inside">
