--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <div class="wrapper">
         <header>
+            <div class="inside">
                 <h1>Danny Kimble</h1>
                 <nav>
                     <ul>
@@ -15,7 +16,8 @@
                         <li><a href="index.html">About</a></li>
                     </ul>
                 </nav>
-            </header>
+            </div>
+        </header>
         <body>
             <div class="clearfix inside">
                 <h2>About Me</h2>
